--- a/client/src/app/estimation/components/cards/sprint-wizard/sprint-wizard.component.scss
+++ b/client/src/app/estimation/components/cards/sprint-wizard/sprint-wizard.component.scss
@@ -14,6 +14,10 @@
 
             mat-card-content {
                 overflow: scroll;
+
+                .actions {
+                    margin-top: 1em;
+                }
             }
         }
     }
