--- a/client/src/app/shared/components/details-item/details-item.component.scss
+++ b/client/src/app/shared/components/details-item/details-item.component.scss
@@ -3,7 +3,7 @@
 
 .details-item-container {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     gap: 0.5em;
 
     .details-item {
@@ -18,6 +18,8 @@
         .item-value {
             font-size: 1em;
             color: variables.$dark-grey-text;
+            word-break: break-all;
+            white-space: normal;
         }
     }
 }
