Add global loader, add i18n keys, update summary functionality, refactor interfaces, add mock server sprint functionality, update styles, start with implementation of notify functionality, naming refactor

--- a/client/src/app/core/components/loader/loader.component.html
+++ b/client/src/app/core/components/loader/loader.component.html
@@ -1,5 +1,6 @@
 <div
     class="loader-container"
     *ngIf="isLoading$ | async">
-    <mat-spinner></mat-spinner>
+    <mat-spinner diameter="24"></mat-spinner>
+    <span>{{ loadingMessage$ | async }}</span>
 </div>
