--- a/client/src/app/core/views/home/home.component.html
+++ b/client/src/app/core/views/home/home.component.html
@@ -1,10 +1,10 @@
 <div class="home-container">
-    <app-side-navigation>
+    <app-core-side-navigation>
         <ng-container sideNavigationContent>
-            <app-navigation></app-navigation>
+            <app-core-navigation></app-core-navigation>
             <div class="view">
                 <router-outlet></router-outlet>
             </div>
         </ng-container>
-    </app-side-navigation>
+    </app-core-side-navigation>
 </div>
