--- a/client/src/app/estimation/components/lists/sprint/sprint.component.html
+++ b/client/src/app/estimation/components/lists/sprint/sprint.component.html
@@ -5,6 +5,7 @@
                 <mat-list-item
                     class="list-item"
                     *ngFor="let sprint of items.value"
+                    (click)="onNavigateToSprint(sprint.id)"
                     matRipple>
                     <mat-icon matListItemIcon>analytics</mat-icon>
                     <div matListItemTitle>{{ sprint.name }}</div>
