--- a/client/src/app/shared/components/details-list/details-list.component.html
+++ b/client/src/app/shared/components/details-list/details-list.component.html
@@ -8,6 +8,7 @@
                 *ngFor="let detail of details"
                 [icon]="detail.icon"
                 [label]="detail.label"
+                [labelKey]="detail.labelKey"
                 [value]="detail.value">
             </app-shared-details-item>
         </div>
@@ -21,6 +22,7 @@
                 *ngFor="let detail of details"
                 [icon]="detail.icon"
                 [label]="detail.label"
+                [labelKey]="detail.labelKey"
                 [value]="detail.value">
             </app-shared-details-item>
         </div>
