--- a/client/src/app/core/components/loader/loader.component.scss
+++ b/client/src/app/core/components/loader/loader.component.scss
@@ -9,4 +9,8 @@
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.32);
+
+    mat-spinner {
+        margin-right: 0.5em;
+    }
 }
