--- a/client/src/styles/components/_stepper.scss
+++ b/client/src/styles/components/_stepper.scss
@@ -2,5 +2,9 @@
     .actions {
         display: flex;
         justify-content: flex-end;
+
+        button {
+            margin-left: 0.5em;
+        }
     }
 }
