--- a/client/src/app/estimation/components/cards/teams/teams.component.scss
+++ b/client/src/app/estimation/components/cards/teams/teams.component.scss
@@ -13,7 +13,7 @@
             // background: linear-gradient(332deg, rgba(238,174,202,0.2) 31%, rgba(148,187,233,0.2) 80%);
 
             mat-card-content {
-                overflow: scroll;
+                overflow-y: scroll;
             }
         }
     }
