--- a/client/src/app/estimation/components/cards/sprint/sprint.component.html
+++ b/client/src/app/estimation/components/cards/sprint/sprint.component.html
@@ -1,14 +1,9 @@
 <div class="sprint-container card-container">
     <mat-card>
         <mat-card-header>
-            <mat-card-title>
-                <h3>{{ 'estimation.text.sprint' | translate }}</h3>
-            </mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-            <div class="title-container">
+            <mat-card-title class="title-container">
                 <div class="title">
-                    <h4>{{ 'estimation.text.general_information' | translate }}</h4>
+                    <h3>{{ 'estimation.text.sprint' | translate }}</h3>
                 </div>
                 <div class="actions">
                     <button
@@ -17,6 +12,13 @@
                         [matMenuTriggerFor]="actions">
                         <mat-icon>more_vert</mat-icon>
                     </button>
+                </div>
+            </mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <div class="title-container">
+                <div class="title">
+                    <h4>{{ 'estimation.text.general_information' | translate }}</h4>
                 </div>
             </div>
 
@@ -28,9 +30,18 @@
 
             <div class="title-container">
                 <div class="title">
-                    <h4>{{ 'estimation.text.general_information' | translate }}</h4>
+                    <h4>{{ 'estimation.text.team_capacity' | translate }}</h4>
                 </div>
             </div>
+
+            <ng-container *ngFor="let member of sprintMembers">
+                <app-shared-details-list
+                    [mapper]="sprintMemberMapper"
+                    [item]="member"
+                    [columnsLength]="(isMobileLayout$ | async) ? 1 : 2">
+                </app-shared-details-list>
+                <mat-divider></mat-divider>
+            </ng-container>
         </mat-card-content>
     </mat-card>
 </div>
